2007-08-11  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/plot.common.R
	* interfaces/R/igraph/R/plot.R (plot.igraph) : added 'asp' parameter

2007-08-10  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/structural.properties.R (is.loop, is.multiple)
	(count.multiple) : added
	* interfaces/R/src/rinterface.c (R_igraph_is_loop, R_igraph_is_multiple)
	(R_igraph_count_multiple) : added

	* interfaces/R/src/rinterface.c (R_igraph_vector_bool_to_SEXP) : added

2007-08-09  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/plot.common.R
	* interfaces/R/igraph/R/plot.R (plot.igraph, rglplot.igraph) :
	added 'rescale' plot parameter

	* interfaces/R/igraph/R/plot.R (plot.igraph) : asp=1 is no longer given

2007-08-09  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/src/rinterface.c
	(R_igraph_attribute_get_string_vertex_attr)
	(R_igraph_attribute_get_string_edge_attr)
	(R_igraph_SEXP_to_strvector) : updates, CHAR() returns const char * 
	in recent R versions

	* interfaces/R/DESCRIPTION.in: suggest tcltk

2007-07-24  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/community.R (walktrap.community) : bug 
	corrected for weighted graphs

2007-07-17  Csardi Gabor  <csardi@duplakave.rmki.kfki.hu>

	* interfaces/R/igraph/R/plot.R (plot.igraph) : corrected bug when
	igraph.Arrows called with a vector argument for h.lwd

2007-06-12  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/revolver.R (revolver.e) 
	* interfaces/R/src/rinterface.c (R_igraph_revolver_e) 
	: added 'st' option

2007-06-09  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/structure.generators.R (graph.de.bruijn)
	(graph.kautz)
	* interfaces/R/src/rinterface.c (R_igraph_de_bruijn, R_igraph_kautz) :
	added

2007-06-08  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/structure.generators.R (line.graph)
	* interfaces/R/src/rinterface.c (R_igraph_line_graph) : added
