@@ -3,7 +3,8 @@ all: igraph_$(VERSION).tar.gz
 
 RRFILES = $(wildcard igraph/R/*.R) \
 	  $(wildcard igraph/man/*.Rd) \
-	  igraph/NAMESPACE igraph/DESCRIPTION
+	  igraph/NAMESPACE igraph/DESCRIPTION \
+          igraph/R/auto.R
 
 RSNAMES_C = basic_query.c games.c cocitation.c iterators.c \
 	structural_properties.c components.c layout.c \
@@ -64,14 +65,30 @@ RSRCSOURCES = $(top_srcdir)/interfaces/R/src/rinterface.c \
 	$(top_srcdir)/interfaces/R/src/config.h.in  \
 	$(top_srcdir)/interfaces/R/src/config.h
 
-# ../../interfaces/R/src/rinterface.c: config.def ../functions.def ../../interfaces/R/src/rinterface.c.in
-# 	../../tools/inger.py -c config.def -f ../functions.def
+# Files generated by stimulus
 
-# igraph/R/auto.R: config.def ../functions.def igraph/R/auto.R.in
-# 	../../tools/inger.py -c config.def -f ../functions.def
+../../interfaces/R/src/rinterface.c: ../../interfaces/functions.def ../../interfaces/R/src/rinterface.c.in 
+	../../tools/stimulus.py \
+           -f ../../interfaces/functions.def \
+           -i ../../interfaces/R/src/rinterface.c.in \
+           -o ../../interfaces/R/src/rinterface.c \
+           -t ../../interfaces/R/types-C.def \
+           -l RC
 
-# igraph/NAMESPACE: config.def ../functions.def igraph/NAMESPACE.in
-# 	../../tools/inger.py -c config.def -f ../functions.def
+igraph/R/auto.R: ../../interfaces/functions.def igraph/R/auto.R.in
+	../../tools/stimulus.py \
+           -f ../../interfaces/functions.def \
+           -i igraph/R/auto.R.in \
+           -o igraph/R/auto.R \
+           -t ../../interfaces/R/types-R.def \
+           -l RR
+
+igraph/NAMESPACE: ../functions.def igraph/NAMESPACE.in
+	../../tools/stimulus.py \
+            -f ../functions.def \
+            -i igraph/NAMESPACE.in \
+            -o igraph/NAMESPACE \
+            -l RNamespace
 
 igraph_$(VERSION).tar.gz: $(RSCNAMES_ORIGPLACE) $(RSRCSOURCES) $(RRFILES)
 	if [ "x$(top_srcdir)" != "x$(top_builddir)" ]; then cp -r $(top_srcdir)/interfaces/R/igraph .; fi
