@@ -1,41 +1,0 @@
-
-# The NAMESPACE file is the simplest one
-
-TEMPLATE R-NAMESPACE:
-	OUTPUT:	igraph/NAMESPACE
-	OMODE: 	append
-	TEMPLATE: 
-		export(%INAME%)
-
-# This is for the R files
-
-TEMPLATE R-R:
-	TYPES: 	types-R.def
-	OUTPUT: igraph/R/auto.R
-	OMODE: 	append
-	CPREF:	
-	TEMPLATE: 
-		%INAME% <- function(%DIINPAR%) {
-		  %INCONV%
-		  .Call("R_%CNAME%", %CINPAR%, 
-		        PACKAGE="igraph")
-		}
-
-# And this is for the C files
-
-TEMPLATE R-C:
-	TYPES:	types-C.def
-	OUTPUT:	src/rinterface.c
-	OMODE:	append
-	CPREF:	c_
-	TEMPLATE:
-		%IRETTYPE% R_%CNAME%(%TIINPAR%) {
-		%DECL%
-		  R_igraph_before();
-		%INCONV%
-		  %CNAME%(%FCPAR%);
-		%OUTCONV%
-		  R_igraph_after();
-		  UNPROTECT(1);
-		  return %IRETURN%;
-		}
