@@ -3,8 +3,8 @@ importFrom(stats, as.dendrogram)
 
 # The igraph interface
 
-export(add.edges, add.vertices, delete.edges,
-       delete.vertices, vcount, ecount, neighbors, get.edges)
+export(add.vertices, delete.edges,
+       delete.vertices, ecount, neighbors, get.edges)
 
 # Attributes
 
@@ -80,7 +80,7 @@ export(read.graph, write.graph, graph.graphdb)
 
 # layouts
 
-export(layout.random, layout.circle, layout.fruchterman.reingold,
+export(layout.random, layout.circle,
        layout.spring, layout.kamada.kawai, layout.lgl,
        layout.fruchterman.reingold.grid, layout.sphere, layout.merge,
        layout.reingold.tilford)
@@ -108,7 +108,7 @@ S3method(rglplot, igraph)
 
 # components
 
-export(clusters, cluster.distribution, is.connected, decompose.graph,
+export(cluster.distribution, is.connected, decompose.graph,
        no.clusters)
 
 # centrality
@@ -169,6 +169,4 @@ export(cliques, largest.cliques, maximal.cliques, clique.number,
        independent.vertex.sets, largest.independent.vertex.sets,
        maximal.independent.vertex.sets, independence.number)
 
-export (graph.empty)
-
-######################## REST IS GENERATED BY inger.py
+######################## REST IS GENERATED BY stimulus
