@@ -43,11 +43,12 @@ cluster.distribution(graph, cumulative = FALSE, mul.size = FALSE, \dots)
 \value{
   For \code{is.connected} a logical constant.
   
-  For \code{clusters} a named list with two components:
+  For \code{clusters} a named list with three components:
   \itemize{
     \item{membership}{numeric vector giving the cluster id to which each
       vertex belongs.}
     \item{csize}{numeric vector giving the sizes of the clusters.}
+    \item{no}{numeric constant, the number of clusters.}
   }
 
   For \code{no.clusters} an integer constant is returned.
