@@ -1,5 +1,13 @@
 2007-08-11  Gabor Csardi  <csardi@rmki.kfki.hu>
 
+	* interfaces/R/igraph/R/components.R (clusters)
+	* interfaces/R/igraph/R/interface.R (graph.empty, vcount) 
+	* interfaces/R/src/rinterface.c (R_igraph_vcount, R_igraph_clusters)
+	(R_igraph_layout_fruchterman_reingold, R_igraph_empty): removed, 
+	autogenerated by stimulus
+	* interfaces/R/igraph/R/layout.R (layout.fruchterman.reingold) :
+	slight update for stimulus
+
 	* interfaces/R/igraph/R/plot.common.R
 	* interfaces/R/igraph/R/plot.R (plot.igraph) : added 'asp' parameter
 
